control-plane/custom-gateway-api/conformance/tests/httproute-matching.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: matching
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    - headers:
      - name: version
        value: one
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /v2
    - headers:
      - name: version
        value: two
    backendRefs:
    - name: infra-backend-v2
      port: 8080
